--- a/MetaFim/makefile
+++ b/MetaFim/makefile
@@ -4,10 +4,10 @@ cliente: cliente.c util.h
 	gcc -o cliente cliente.c 
 
 balcao: balcao.c util.h
-	gcc -lpthread -o balcao balcao.c 
+	gcc -ggdb -lpthread -o balcao balcao.c 
 
 medico: medico.c util.h
 	gcc -o medico medico.c
 
 clean:
-	rm cliente balcao medico 
+	rm cliente balcao medico balcFifoUt balcFifoMed
